--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Para Guada</h1>
         <p id="mensaje">Desde que te conocí, cada día es más especial con tu sonrisa y tu forma de ser. ❤️</p>
-        <h2> ¿TE GUSTARÍA ESTAR CONMIGO?</h2>
+        <h2>¿Queres ser mi San Valentin?</h2>
         <div class="buttons">
             <button id="botonSi">Sí 💖</button>
             <button id="botonNo">No 💔</button>
